test_scores/negative_dimers/features/Q99700.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q99700.pkl.xz